# ml_project_template

./: .amlignore  .coveragerc  .gitignore  .pylintrc  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: pylint.yml
infrastructure/: aml_dockerfile  config.yml  config_template.yml  environment.yml
src/python/: utils.py
src/python/azure_ml/: aml_experiment.py  aml_utils.py  azure_ml_experiment.py  azure_ml_utils.py  mlflow_logger.py  mlflow_tracker.py
src/python/ingress/: ingressor.py
src/python/preprocess/: preprocessor.py
src/python/runners/: azure_ml_runner.py  runner_utils.py  training_runner.py
src/python/sagemaker/: sagemaker_experiment.py  sagemaker_utils.py
src/python/training/: kpi_generator.py  metric_generator.py  training_evaluator.py  training_pipeline.py  training_preparation.py  training_utils.py  training_visualizer.py  training_workflow.py
src/r/: utils.R
src/r/azure_ml/: aml_utils.R
src/r/ingress/: ingressor.Rmd
