[metadata]
name = ml_project_template
version = 0.1.0  # attr: my_package.VERSION
author = Michael Nelz
author_email = michael.nelz@nelo-intelligence.com
description = Template package for Machine Learning projects

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.packages.find]
exclude =
    tests
    docs

[options.entry_points]
console_scripts = 
    example_train = src.runners.training_runner:main